<resources>
    <string name="app_name">Agenda</string>
    <string name="tab_text_1">Notas</string>
    <string name="tab_text_2">Tareas</string>s
    <string name="lblNombre">Nombre</string>
    <string name="lblDescripcion">Descripción</string>
    <string name="lblMultimedia">Agregar multimedia:</string>
    <string name="btnVoice">Graba audio</string>
    <string name="btnAgregarNota">Agregar nota</string>
    <string name="txtNombre">Nombre de la nota...</string>
    <string name="txtDescripcion">Descripción de la nota...</string>
    <string name="txtNombreTarea">Nombre de la tarea</string>
    <string name="txtDescripcionTarea">Descripción de la tarea...</string>
    <string name="btnAgregarTarea">Agregar tarea</string>
    <string name="btnAgregarFecha">Agregar fecha</string>
    <string name="btnVideo">Tomar video</string>
    <string name="btnCamara">Tomar foto</string>
    <string name="btnFecha">Boton para seleccionar fecha</string>
    <string name="btnHora">Botón para seleccionar hora</string>
    <string name="txtHora">Ingrese hora</string>
    <string name="txtFecha">Ingrese fecha</string>
    <string name="lblFechaHora">Seleccione fecha de vencimiento:</string>
</resources>